--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,16 @@ name = "demo"
 path = "examples/demo.rs"
 
 [dependencies]
+dotenv = "*"
+clap = { version = "*", features = ["derive"] }
 anyhow = "1.0.95"
-reqwest = { version = "0.12.11", features = ["blocking", "json", "rustls-tls"] }
-urlencoding = "2.1.3"
+reqwest = { version = "0.12.11", features = [
+    "blocking",
+    "json",
+    "rustls-tls",
+], default-features = false }
+openssl = { version = "0.10", features = ["vendored"] }
+
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
 tokio = { version = "1.42.0", features = ["full"] }
@@ -20,6 +27,7 @@ cryptocol = "0.8.5"
 sha2 = "0.10.8"
 hmac = "0.12.1"
 uuid = { version = "*", features = ["serde", "v4"] }
+urlencoding = "2.1.3"
 # 
 reqwest-websocket = "0.4.4"
 # ws = { version = "*" }
